--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>JCC</title>
+     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
+
   </head>
   <body>
     <div class="header">Even Hipper Chat</div>
-    <input id="usernamebox" type="text">
-    <input id="messagebox" type="text">
+    Username:<input id="usernamebox" type="text"><br>
+    Message:   <input id="messagebox" type="text"><br>
     <button id="submit" type="button">Submit</button>
     <div id="chatbox"> </div>
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="scripts/jquery.min.js"></script>
+    <script src="scripts/lodash.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
