--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <title>JCC</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <div class="header">Even Hipper Chat</div>
+    <div class="header">HipstaFari Chat</div>
     
     <div id="chatbox"> </div>
        Username:<input id="usernamebox" type="text"><br>
