--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <div class="header">HipstaFari Chat</div>
-    
+    <div class="header">HipstAfari ChatteRbox</div>
+   
     <div id="chatbox"> </div>
-       Username:<input id="usernamebox" type="text"><br>
-       Message:   <input id="messagebox" type="text"><br>
-    <button id="submit" type="button">Submit</button>
+      <div class="usernamesubmitbox">Username:
+        <input id="usernamebox" type="text"><br>
+        Message:   
+        <input id="messagebox" type="text"><br>
+        <button id="submit" type="button">Submit</button>
+      </div>
+ 
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/lodash.min.js"></script>
     <script src="scripts/main.js"></script>
